[gd_scene load_steps=6 format=3 uid="uid://doyn3ck1c4coi"]

[ext_resource type="Script" path="res://Scene/dragon.gd" id="1_if2k6"]
[ext_resource type="PackedScene" uid="uid://cx3on3m8vnkdv" path="res://Scene/scale.tscn" id="2_ywfyn"]
[ext_resource type="PackedScene" uid="uid://cmx80pwwp6yux" path="res://Scene/scaleotherSide.tscn" id="3_fpggf"]
[ext_resource type="PackedScene" uid="uid://cl5a3fa405qw7" path="res://Scene/DragonRigged.tscn" id="3_ngggp"]

[sub_resource type="BoxShape3D" id="BoxShape3D_tprs8"]

[node name="Dragon" type="StaticBody3D"]
script = ExtResource("1_if2k6")

[node name="Dragon" parent="." instance=ExtResource("3_ngggp")]

[node name="Skeleton3D" parent="Dragon/DragonRig" index="0"]
bones/1/rotation = Quaternion(0.0173565, 0.992619, -0.120005, 0.00209836)
bones/2/rotation = Quaternion(0.121929, -0.00728287, 0.0245036, 0.99221)
bones/3/rotation = Quaternion(0.245233, -0.0103489, -0.0408725, 0.968547)
bones/4/rotation = Quaternion(0.795395, 0.592696, 0.102343, 0.0747229)
bones/5/rotation = Quaternion(-0.126981, -0.000183234, -0.262232, 0.956614)
bones/6/rotation = Quaternion(-0.135194, -0.0525568, -0.168305, 0.975005)
bones/7/rotation = Quaternion(0.102344, -5.92917e-08, -6.10017e-09, 0.994749)
bones/8/rotation = Quaternion(0.0936836, -3.68455e-15, -1.11679e-08, 0.995602)
bones/9/rotation = Quaternion(0.14974, -1.38778e-14, -1.78504e-08, 0.988725)
bones/10/rotation = Quaternion(-0.00612965, 1.16573e-14, 7.30711e-10, 0.999981)
bones/11/rotation = Quaternion(7.26198e-08, 0.273478, 0.961878, 2.0647e-08)
bones/12/rotation = Quaternion(-0.453283, -3.61043e-14, 6.84438e-08, 0.891367)
bones/13/rotation = Quaternion(0.192014, 0.0469044, 0.00918797, 0.980228)
bones/14/rotation = Quaternion(0.192014, 0.0469044, 0.00918797, 0.980228)
bones/15/rotation = Quaternion(-0.0173565, 0.992619, -0.120005, -0.00209836)
bones/16/rotation = Quaternion(0.121929, 0.00728264, -0.0245037, 0.99221)
bones/17/rotation = Quaternion(0.245233, 0.0103492, 0.0408725, 0.968547)
bones/18/rotation = Quaternion(0.79236, -0.594489, -0.123668, 0.0587779)
bones/19/rotation = Quaternion(-0.135966, 0.0845228, 0.257687, 0.952873)
bones/20/rotation = Quaternion(-0.141147, -0.0323038, 0.163344, 0.975886)

[node name="Scale" parent="." instance=ExtResource("2_ywfyn")]
transform = Transform3D(1, 0, 0, 0, 0.945449, -0.325769, 0, 0.325769, 0.94545, 0, 4.16271, 3.14245)

[node name="Scale1" parent="." instance=ExtResource("2_ywfyn")]
transform = Transform3D(1, -0.000246798, 9.45517e-05, 0.000236016, 0.994912, 0.100751, -0.000118936, -0.100751, 0.994912, 0, 4.21859, -1.12888)

[node name="Scale2" parent="." instance=ExtResource("2_ywfyn")]
transform = Transform3D(0.996907, -0.0290498, -0.0730217, 0.0460104, 0.969024, 0.242641, 0.0637112, -0.245251, 0.967364, -0.0174345, 2.59906, -4.28581)

[node name="Scale3" parent="." instance=ExtResource("2_ywfyn")]
transform = Transform3D(0.683477, 0.72426, -0.0911418, -0.699567, 0.685543, 0.201586, 0.208482, -0.0740197, 0.975221, 0.994617, 3.30419, -2.42873)

[node name="Scale4" parent="." instance=ExtResource("2_ywfyn")]
transform = Transform3D(0.545757, 0.7971, 0.258421, -0.829263, 0.469503, 0.303134, 0.120299, -0.379736, 0.91724, 1.53872, 1.6645, -4.17755)

[node name="Scale5" parent="." instance=ExtResource("2_ywfyn")]
transform = Transform3D(0.827986, 0.55893, -0.0451275, -0.557403, 0.811598, -0.174959, -0.0611642, 0.170018, 0.983541, 1.09149, 4.09858, 1.11589)

[node name="Scale6" parent="." instance=ExtResource("2_ywfyn")]
transform = Transform3D(0.809037, 0.549264, -0.209209, -0.586973, 0.773427, -0.239318, 0.030359, 0.316418, 0.948134, 1.07862, 3.69949, 4.60537)

[node name="Scale7" parent="." instance=ExtResource("2_ywfyn")]
transform = Transform3D(0.422134, 0.897909, -0.124749, -0.903504, 0.40548, -0.138805, -0.0740515, 0.171306, 0.982431, 1.95719, 2.88689, -1.12128)

[node name="Scale8" parent="." instance=ExtResource("2_ywfyn")]
transform = Transform3D(0.610295, 0.75816, -0.22964, -0.787989, 0.551244, -0.274233, -0.0813252, 0.348317, 0.933842, 1.94607, 3.04893, 2.84339)

[node name="Scale9" parent="." instance=ExtResource("2_ywfyn")]
transform = Transform3D(0.429931, 0.81263, -0.393436, -0.898878, 0.426146, -0.102067, 0.0847185, 0.397532, 0.913669, 2.23659, 1.68973, 5.22585)

[node name="Scale10" parent="." instance=ExtResource("2_ywfyn")]
transform = Transform3D(0.214229, 0.967758, -0.132481, -0.972803, 0.199153, -0.118292, -0.0880942, 0.154219, 0.984102, 2.36698, 0.736977, -1.99378)

[node name="Scale11" parent="." instance=ExtResource("2_ywfyn")]
transform = Transform3D(0.199105, 0.959997, -0.196887, -0.969847, 0.164214, -0.180084, -0.140548, 0.226806, 0.963745, 2.81846, 0.458366, -0.0172328)

[node name="Scale12" parent="." instance=ExtResource("2_ywfyn")]
transform = Transform3D(0.479391, 0.845053, -0.23679, -0.877503, 0.465591, -0.114947, 0.0131109, 0.262889, 0.964737, 2.55462, 2.31816, 0.846034)

[node name="Scale13" parent="." instance=ExtResource("2_ywfyn")]
transform = Transform3D(0.140856, 0.963997, -0.22554, -0.982941, 0.163383, 0.0844532, 0.118262, 0.209797, 0.970567, 3.17141, 0.829417, 2.74523)

[node name="scaleotherSide" parent="." instance=ExtResource("3_fpggf")]

[node name="DeathTimer" type="Timer" parent="."]

[node name="Dragonskin" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_tprs8")
disabled = true

[connection signal="you_win" from="Scale" to="." method="_on_scale_you_win"]
[connection signal="you_win" from="Scale1" to="." method="_on_scale_1_you_win"]
[connection signal="you_win" from="Scale2" to="." method="_on_scale_2_you_win"]
[connection signal="you_win" from="Scale3" to="." method="_on_scale_3_you_win"]
[connection signal="you_win" from="Scale4" to="." method="_on_scale_4_you_win"]
[connection signal="you_win" from="Scale5" to="." method="_on_scale_5_you_win"]
[connection signal="you_win" from="Scale6" to="." method="_on_scale_6_you_win"]
[connection signal="you_win" from="Scale7" to="." method="_on_scale_7_you_win"]
[connection signal="you_win" from="Scale8" to="." method="_on_scale_8_you_win"]
[connection signal="you_win" from="Scale9" to="." method="_on_scale_9_you_win"]
[connection signal="you_win" from="Scale10" to="." method="_on_scale_10_you_win"]
[connection signal="you_win" from="Scale11" to="." method="_on_scale_11_you_win"]
[connection signal="you_win" from="Scale12" to="." method="_on_scale_12_you_win"]
[connection signal="you_win" from="Scale13" to="." method="_on_scale_13_you_win"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]

[editable path="Dragon"]
